<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121111"
    tools:context=".SecondFragment" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/search"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/your_top_genres"
        android:textAlignment="center"
        android:textColor="#F3EFEF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button"
        android:layout_width="170dp"
        android:layout_height="129dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#E41212"
        android:gravity="fill_horizontal"
        android:text="@string/reggaeton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="170dp"
        android:layout_height="129dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#7A7777"
        android:gravity="fill_horizontal"
        android:text="@string/electronica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="170dp"
        android:layout_height="129dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#E63471"
        android:gravity="fill_horizontal"
        android:text="@string/pop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="170dp"
        android:layout_height="129dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#834FE1"
        android:gravity="fill_horizontal"
        android:text="@string/techno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
